# XianyuAutoAgent

./: .env.example  .gitignore  Dockerfile  README.md  XianyuAgent.py  XianyuApis.py  build_index.py  context_manager.py  main.py  pyproject.toml  rag_service.py
data/: user_dict.txt
eval/: baseline_report.json  dataset.json  final_report.json  metrics.py  run_eval.py  stage2_report.json  stage3_report.json  sweep_report.json
utils/: xianyu_utils.py
